--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,19 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  .perspective-1000 {
+    perspective: 1000px;
+  }
+  .transform-style-3d {
+    transform-style: preserve-3d;
+  }
+  .rotate-y-180 {
+    transform: rotateY(180deg);
+  }
+  .backface-hidden {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+  }
 }
 
 @layer base {
